[gd_scene load_steps=42 format=3 uid="uid://bjgoqh2pv3i1u"]

[ext_resource type="Script" uid="uid://dupokhtpv7sit" path="res://Scenes/Characters/Scripts/Warrior.gd" id="1_0pk43"]
[ext_resource type="Texture2D" uid="uid://cpux7qoh6fr7d" path="res://Scenes/rat base outline v2-Sheet.png" id="2_0pk43"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_13sk1"]
radius = 16.0
height = 48.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3gyvf"]
atlas = ExtResource("2_0pk43")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yi808"]
atlas = ExtResource("2_0pk43")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_en6vl"]
atlas = ExtResource("2_0pk43")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6xb6"]
atlas = ExtResource("2_0pk43")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_krik5"]
atlas = ExtResource("2_0pk43")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yico5"]
atlas = ExtResource("2_0pk43")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu5rv"]
atlas = ExtResource("2_0pk43")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf44o"]
atlas = ExtResource("2_0pk43")
region = Rect2(448, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w7e1"]
atlas = ExtResource("2_0pk43")
region = Rect2(512, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nscx5"]
atlas = ExtResource("2_0pk43")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjr01"]
atlas = ExtResource("2_0pk43")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7asq"]
atlas = ExtResource("2_0pk43")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_agtwk"]
atlas = ExtResource("2_0pk43")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmyvj"]
atlas = ExtResource("2_0pk43")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a7mt"]
atlas = ExtResource("2_0pk43")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ck1dd"]
atlas = ExtResource("2_0pk43")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs0rb"]
atlas = ExtResource("2_0pk43")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5pi3"]
atlas = ExtResource("2_0pk43")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_574td"]
atlas = ExtResource("2_0pk43")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2hnr"]
atlas = ExtResource("2_0pk43")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ouj5"]
atlas = ExtResource("2_0pk43")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccykb"]
atlas = ExtResource("2_0pk43")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr8pk"]
atlas = ExtResource("2_0pk43")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_omces"]
atlas = ExtResource("2_0pk43")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_74xkx"]
atlas = ExtResource("2_0pk43")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tygrn"]
atlas = ExtResource("2_0pk43")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo73x"]
atlas = ExtResource("2_0pk43")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb4l6"]
atlas = ExtResource("2_0pk43")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlhey"]
atlas = ExtResource("2_0pk43")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjwbw"]
atlas = ExtResource("2_0pk43")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0fmy"]
atlas = ExtResource("2_0pk43")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkfoy"]
atlas = ExtResource("2_0pk43")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_masd8"]
atlas = ExtResource("2_0pk43")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qrd8"]
atlas = ExtResource("2_0pk43")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eiipp"]
atlas = ExtResource("2_0pk43")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tuou"]
atlas = ExtResource("2_0pk43")
region = Rect2(448, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_pscbo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gyvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi808")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en6vl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6xb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krik5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yico5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu5rv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf44o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w7e1")
}],
"loop": false,
"name": &"WarriorAttack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nscx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjr01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7asq")
}],
"loop": false,
"name": &"WarriorFall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_agtwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmyvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a7mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ck1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs0rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5pi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_574td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2hnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ouj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccykb")
}],
"loop": true,
"name": &"WarriorIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr8pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omces")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74xkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tygrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eo73x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb4l6")
}],
"loop": false,
"name": &"WarriorJump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlhey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjwbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0fmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkfoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_masd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qrd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eiipp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tuou")
}],
"loop": false,
"name": &"WarriorRunning",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3gyvf"]
size = Vector2(20, 40)

[node name="WarriorNode" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_0pk43")

[node name="WarriorCollisionShape" type="CollisionShape2D" parent="."]
texture_filter = 1
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_13sk1")
debug_color = Color(0.585609, 0.54969, 0, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_pscbo")
animation = &"WarriorIdle"
autoplay = "WarriorIdle"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, 0)
zoom = Vector2(1.2, 1.2)
limit_left = -50
limit_top = 0
limit_bottom = 720
limit_smoothed = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="WarriorSword" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="WarriorAttackCollisionShape" type="CollisionShape2D" parent="WarriorSword"]
position = Vector2(32, 8)
shape = SubResource("RectangleShape2D_3gyvf")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
